backport to jei 9 (#24)
* Hello Jei 10!

* backport to jei 9

* Add simple rei compatibility